[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hiob-platform"
version = "0.1.0"
description = "HIOB polyrepo · hiob-platform"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "import-linter>=2.0"]

[tool.setuptools]
packages = ["hiob_platform"]

[tool.pytest.ini_options]
testpaths = ["tests"]

