[build-system]
requires = ["setuptools>=68", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "hiob-platform"
version = "0.1.0"
description = "Hiob agent-native video platform SDK (Python)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "supabase>=2.18",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["hiob_platform*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
