[project]
name = "hiob-platform"
version = "0.1.0"
description = "Hiob agent-native video platform SDK (Python) — auth·DB client·spans (폴리레포 substrate)."
requires-python = ">=3.11"
dependencies = [
  "supabase>=2.18",
  "httpx",
  "pydantic",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hiob_platform"]
